# ani-mime

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  settings.html  superpower.html  terminal-mirror.zsh  tsconfig.json  vite.config.ts  vitest.config.ts
.c3/: README.md  code-map.yaml
.c3/adr/: adr-20260414-fill-c3-skeleton.md  adr-20260414-support-wsl2-linux.md
.c3/c3-1-rust-backend/: README.md  c3-101-http-server.md  c3-102-state-management.md  c3-103-logger.md  c3-104-platform-adapter.md  c3-110-watchdog.md  c3-111-peer-discovery.md  c3-112-setup-flow.md  c3-113-updater.md
.c3/c3-2-react-frontend/: README.md  c3-201-hooks.md  c3-202-sprite-engine.md  c3-203-effects-system.md  c3-210-mascot-ui.md  c3-211-settings.md  c3-212-superpower-tools.md  c3-213-smart-import.md  c3-214-visitor-dogs.md
.c3/c3-3-shell-integration/: README.md  c3-301-terminal-mirror.md  c3-310-claude-hooks.md  c3-311-mcp-server.md
.c3/refs/: ref-cross-window-sync.md  ref-http-api-contract.md  ref-peer-visit-protocol.md  ref-setup-flow.md  ref-sprite-animation.md  (+3 more)
.github/: CODEOWNERS
docs/: ARCHITECTURE.md  adding-features.md  animation-system.md  constants-reference.md  conventions.md  events-reference.md  http-api.md  peer-discovery.md  project-structure.md  setup-flow.md  state-management.md  theming.md
e2e/: playwright.config.ts  smoke.spec.ts  tauri-mock.ts
scripts/: extract_sprites.py  repack_grid.py  verify_sprite_extraction.ts
src/: App.css  App.tsx  settings-main.tsx  superpower-main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mcp-server/: server.mjs
src-tauri/script/: install-hook.sh  install-mac.sh  post-build-sign.sh  tauri-hook.sh  terminal-mirror.bash  terminal-mirror.fish  terminal-mirror.zsh
src-tauri/src/: broadcast.rs  discovery.rs  helpers.rs  lib.rs  logger.rs  main.rs  proc_scan.rs  server.rs  state.rs  updater.rs  watchdog.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs
src-tauri/src/setup/: claude.rs  mcp.rs  mod.rs  shell.rs
(+112 files in other folders)
